feat: integrate consultations with frontend
